# r2d2-ex

./: .env  .gitignore  Cargo.toml  config.toml  docker-compose.yaml
src/: main.rs
src/app/: db.rs  error.rs
