[package]
name = "r2d2-ex"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }

actix = "0.13.1"
actix-web = "4.4"
r2d2 = "0.8.10"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
